--- a/myproject/templates/index/student.html
+++ b/myproject/templates/index/student.html
@@ -1,20 +1,21 @@
 {% extends "base.html" %}
 
-{% block title %}Домашняя{% endblock title %}
+{% block title %}Домашняя страница{% endblock title %}
 
 {% block content %}
 <h1>Домашняя страница</h1>
     <ul>
-        <li>User {{ user }}</li>
+        <li>Слушатель {{ user }}</li>
         <li><a href="{% url 'index' %}">Home</a></li>
     </ul>
     {% if user.is_authenticated %}
     <form id="logout-form" action="{% url "logout" %}" method="post">
         {% csrf_token %}
-        <button type='submit'>Выйти</button>
+        <button class="btn btn-danger" type='submit'>Выйти</button>
     </form>
     {% else %}
-    <a href="{% url "login" %}">Войти</a> | 
-    <a href="{% url "register" %}">Регистрация</a>
+    <a class="btn btn-primary" href="{% url "login" %}">Войти</a> | 
+    <a class="btn btn-primary" href="{% url "register" %}">Регистрация</a>
     {% endif %}
+
 {% endblock content %}
