--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static "css/index.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
 </head>
@@ -11,5 +12,6 @@
     {% block content %}
     
     {% endblock content %}
+    <script href="{% static "js/bootstrap.min.js" %}"></script>
 </body>
 </html>
