--- a/myproject/templates/index/greeting.html
+++ b/myproject/templates/index/greeting.html
@@ -1,12 +1,12 @@
-{% extends "base.html" %}
+{% extends "navigation.html" %}
 
 {% block title %}Приветстенная страница{% endblock title %}
 
-{% block content %}
+{% block contents %}
 
 <h1>Привет</h1>
 
 <a class="btn btn-primary" href="{% url "login" %}">Войти</a> | 
 <a class="btn btn-primary" href="{% url "register" %}">Регистрация</a>
 
-{% endblock content %}
+{% endblock contents %}
