--- a/myproject/templates/index/student.html
+++ b/myproject/templates/index/student.html
@@ -18,4 +18,9 @@
     <a class="btn btn-primary" href="{% url "register" %}">Регистрация</a>
     {% endif %}
 
+    <form method="post" action="{% url "index" %}" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Подтвердить">
+    </form>
 {% endblock content %}
