--- a/myproject/templates/index/greeting.html
+++ b/myproject/templates/index/greeting.html
@@ -2,8 +2,8 @@
 
 {% block title %}Приветстенная страница{% endblock title %}
 
-{% block contents %}
+{% block content %}
 
 <h1>Привет</h1>
 
-{% endblock contents %}
+{% endblock content %}
