--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -9,6 +9,7 @@
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
+    {% block navigation %}{% endblock navigation %}
     {% block content %}
     
     {% endblock content %}
