--- a/myproject/templates/manager_navigation.html
+++ b/myproject/templates/manager_navigation.html
@@ -4,7 +4,7 @@
 {% block title %}{% endblock title %}
 
 {% block navigation %}
-<div class="container">
+<div class="container mt-2">
     <div class="row align-items-center">
         <div class="col col-md-auto">
             <img src="{% static "img/logo.png" %}" width="70px" height="70px" alt="">   
