--- a/myproject/templates/dpo/students.html
+++ b/myproject/templates/dpo/students.html
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <div class="col col-md-auto d-flex flex-column gap-3">
-                        <a href="#" class="btn btn-primary">Перейти</a>
+                        <a href="#" class="btn btn-primary">Отчислить</a>
                         <a href="#" class="btn btn-primary">Изменить</a>
                     </div>
                 </div>
