--- a/myproject/templates/dpo/teachers.html
+++ b/myproject/templates/dpo/teachers.html
@@ -1,11 +1,11 @@
 {% extends "manager_navigation.html" %}
 {% load static %}
 
-{% block title %}Заявления{% endblock title %}
+{% block title %}Преподаватели{% endblock title %}
 
 {% block content %}
 <div class="container">
-    <h1>Заявления</h1>
+    <h1>Преподаватели</h1>
 
 </div>
 
