--- a/myproject/templates/registration/register.html
+++ b/myproject/templates/registration/register.html
@@ -3,12 +3,14 @@
 {% block title %}Регистрация{% endblock title %}
 
 {% block content %}
-<h1>Регистрация</h1>
+<div class="container">
+    <h1>Регистрация</h1>
 
-<form action="{% url "register" %}" method='post'>
-    {% csrf_token %}
+    <form action="{% url "register" %}" method='post'>
+        {% csrf_token %}
 
-    {{form.as_p}}
-<button class="btn btn-success" class="btn btn-success" type="submit">Далее</button>
-</form>
+        {{form.as_p}}
+    <button class="btn btn-success" class="btn btn-success" type="submit">Далее</button>
+    </form>
+</div>
 {% endblock content %}
