--- a/myproject/templates/guest_navigation.html
+++ b/myproject/templates/guest_navigation.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block navigation %}
+
+<div class="container">
+    <div class="mx-auto p-2" style="width: 200px;"><img src="{% static "img/vert_logo.svg" %}" alt=""></div>
+
+
+
+</div>
 
 {% endblock navigation %}
