--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
+    {% block style %}{% endblock style %}
+
 </head>
 <body>
     {% block navigation %}{% endblock navigation %}
     {% block content %}
     
     {% endblock content %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script href="{% static "js/bootstrap.min.js" %}"></script>
+
 </body>
 </html>
