--- a/myproject/templates/dpo/students.html
+++ b/myproject/templates/dpo/students.html
@@ -5,44 +5,75 @@
 
 {% block content %}
 <div class="container">
+    <!-- Поиск -->
     <div class="row mt-3">
-        <div class="col col-2"></div>
-        <div class="col col-10">Поиск</div>
+        <div class="col-2"></div>
+        <div class="col-10">
+            <input type="text" class="form-control" placeholder="Поиск по ФИО">
+        </div>
     </div>
+
     <div class="row mt-3">
-        <div class="col col-2">
-            <div class="row">Фильтрация</div>
-            <div class="row d-flex flex-column">
-                
+        <!-- Фильтрация (слева) -->
+        <div class="col-2">
+            <div class="border p-3 bg-light rounded">
+                <h6>Фильтрация</h6>
+                <label class="mt-2">Статус обучения</label>
+                <select class="form-select">
+                    <option value="">Все</option>
+                    <option value="Активный">Активный</option>
+                    <option value="Завершён">Завершён</option>
+                    <option value="Отложен">Отложен</option>
+                </select>
+
+                <label class="mt-2">Форма обучения</label>
+                <select class="form-select">
+                    <option value="">Все</option>
+                    <option value="Онлайн">Онлайн</option>
+                    <option value="Офлайн">Офлайн</option>
+                </select>
+
+                <label class="mt-2">Год рождения</label>
+                <input type="number" class="form-control" placeholder="Введите год" min="1900" max="2024">
             </div>
         </div>
-        <div class="col col-10">
+
+        <!-- Карточки слушателей -->
+        <div class="col-10">
             {% for student in students %}
-                <div class="row align-items-center border mb-3">
-                    <div class="col col-md-auto"><img src="{% static "img/logo.png" %}" width="150px" height="150px" alt=""></div>
+                <div class="row align-items-center border p-3 mb-3 rounded shadow-sm">
+                    <!-- Фото -->
+                    <div class="col-md-auto">
+                        <img src="{% static 'img/logo.png' %}" width="120px" height="120px" class="rounded-circle border" alt="">
+                    </div>
+
+                    <!-- Данные студента -->
                     <div class="col">
                         <div class="row pt-2">
-                            <div class="col col-md-auto d-flex flex-column">
-                                <p>ФИО: {{student.surname}} {{student.name}} {{student.patronymic}}</p>
-                                <p>Статус: {{student.status}}</p>
-                                <p>День рождения: {{student.birthday}}</p>
-                                <p>СНИЛС: {{student.SNILS}}</p>
+                            <div class="col-md-auto d-flex flex-column">
+                                <p><strong>ФИО:</strong> {{ student.surname }} {{ student.name }} {{ student.patronymic }}</p>
+                                <p><strong>Статус:</strong> {{ student.status }}</p>
+                                <p><strong>Дата рождения:</strong> {{ student.birthday }}</p>
+                                <p><strong>СНИЛС:</strong> {{ student.SNILS }}</p>
                             </div>
-                            <div class="col col-md-auto d-flex flex-column">
-                                <p>Группа: </p>
-                                <p>Телефон: {{student.phone}}</p>
-                                <p>Почта: {{student.email}}</p>
-                                <p>Паспорт: {{student.passport}}</p>
+                            <div class="col-md-auto d-flex flex-column">
+                                <p><strong>Группа:</strong> -</p>
+                                <p><strong>Телефон:</strong> {{ student.phone }}</p>
+                                <p><strong>Почта:</strong> {{ student.email }}</p>
+                                <p><strong>Паспорт:</strong> {{ student.passport }}</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col col-md-auto d-flex flex-column gap-3">
-                        <a href="#" class="btn btn-primary">Отчислить</a>
-                        <a href="#" class="btn btn-primary">Изменить</a>
+
+                    <!-- Кнопки -->
+                    <div class="col-md-auto d-flex flex-column gap-2">
+                        <a href="#" class="btn btn-danger">Отчислить</a>
+                        <a href="#" class="btn btn-warning text-dark">Изменить</a>
                     </div>
                 </div>
             {% endfor %}
         </div>
     </div>
 </div>
+
 {% endblock content %}
