--- a/myproject/templates/registration/login.html
+++ b/myproject/templates/registration/login.html
@@ -1,19 +1,19 @@
-{% extends "base.html" %}
+{% extends "guest_navigation.html" %}
 
 {% block title %}Вход{% endblock title %}
 
 {% block content %}
 <div class="container">
-    <div class="mx-auto" style="width: auto;">
-        <h1>Вход</h1>
+    <div class="mx-auto" style="width: 500px;">
+        <h1 class="text-center">Вход</h1>
 
         {% if form.errors %}
             <p>{{ form.errors.error }}</p>
         {% endif %}
-        <form action="{% url "login" %}" method="post">
-        {{form}}
-        {% csrf_token %}
-        <button class="btn btn-primary" type="submit">Войти</button>
+        <form action="{% url "login" %}" method="post" class="">
+            {% csrf_token %}
+            {{form.as_p}}
+            <button class="btn btn-primary" type="submit">Войти</button>
         </form>
         <a href="{% url "register" %}">Регистрация</a>
     </div>
