--- a/myproject/templates/registration/register.html
+++ b/myproject/templates/registration/register.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "guest_navigation.html" %}
 
 {% block title %}Регистрация{% endblock title %}
 
@@ -12,5 +12,6 @@
         {{form.as_p}}
     <button class="btn btn-success" class="btn btn-success" type="submit">Далее</button>
     </form>
+    <a href="{% url "login" %}">Войти</a>
 </div>
 {% endblock content %}
