--- a/myproject/templates/dpo/groups/group_add.html
+++ b/myproject/templates/dpo/groups/group_add.html
@@ -4,7 +4,10 @@
 {% block title %}Добавление группы{% endblock title %}
 
 {% block content %}
-
+<div class="container">
+    <h2>Добавление группы</h2>
+    
+</div>
 
 
 
