--- a/myproject/templates/dpo/statements.html
+++ b/myproject/templates/dpo/statements.html
@@ -80,14 +80,33 @@
                     <!-- Карточка 1 -->
                     {% for statement in statements %}
                     <div class="card p-4 mb-3">
-                        <h4>📌 ФИО: <strong>{{ statement.student.surname }} {{ statement.student.name }} {{ statement.student.patronymic }}</strong></h4>
+                        <h4>Слушатель: <strong>{{ statement.student.surname }} {{ statement.student.name }} {{ statement.student.patronymic }}</strong></h4>
                         <p><strong>📝 Тип заявления:</strong> {{ statement.statement_type }}</p>
                         <p><strong>📅 Дата подачи:</strong> {{ statement.submitting_date }}</p>
                         <p><strong>🎓 Курс:</strong> {{ statement.course.course_name }}</p>
-    
-                        <!-- Кнопки -->
-                        <div class="d-flex justify-content-between mt-3">
-                            <button class="btn btn-accept w-50 me-2" onclick="acceptApplication()">Зачислить</button>
+                        <form action="{% url "statements" %}" method="POST">
+                            {% csrf_token %}
+                            <label for="groups"><strong>Группа:</strong></label>
+                            <select name="selected_group" id="groups">
+                                {% with found_suitable_group=False %}
+                                    {% for group in groups %}
+                                        {% if group.finish_date > today and group.course.id == statement.course.id %}
+                                            <option value="{{ group.id }}">{{ group.name }}</option>
+                                            {% with found_suitable_group=True %}
+                                            {% endwith %}
+                                        {% endif %}
+                                    {% endfor %}
+                                    {% if not found_suitable_group %}
+                                        <option value="">Нет подходящих групп</option>
+                                    {% endif %}
+                                {% endwith %}
+                            </select>
+        
+                            <!-- Кнопки -->
+                            <div class="d-flex justify-content-between mt-3">
+                                <button class="btn btn-accept w-50 me-2" type="submit">Зачислить</button>
+                        </form>
+
                             <button class="btn btn-reject w-50" onclick="rejectApplication()">Отклонить</button>
                         </div>
                     </div>
