--- a/myproject/templates/manager_navigation.html
+++ b/myproject/templates/manager_navigation.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col col-md-auto">
             <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" style="background: #9999FF; border-color: #9999FF;" type="button" id="userMenu" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn btn-primary dropdown-toggle" style="background: rgb(125, 125, 255); border-color: rgb(125, 125, 255);" type="button" id="userMenu" data-bs-toggle="dropdown" aria-expanded="false">
                     Меню
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="userMenu">
