--- a/myproject/templates/student_navigation.html
+++ b/myproject/templates/student_navigation.html
@@ -10,8 +10,9 @@
             Центр ДПО
         </div>
         <div class="col d-flex justify-content-around">
-            <a href="{% url "index" %}">Личные данные</a> 
+            <a href="{% url "index" %}">Профиль</a> 
             <a href="{% url "new_statement" %}">Подать заявление</a>
+            <a href="{% url "student_statements" %}">Мои заявления</a>
         </div>
         <div class="col col-md-auto">
             {% if user.is_authenticated %}
